k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: biomarker-identifier
  labels:
    name: biomarker-identifier
    app: biomarker-identifier
